--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -166,7 +166,7 @@
   6 rows in set (0.001 sec)
     </pre>
 <hr>
-<br>    <h2>Data Types</h2><br>
+<h2>Data Types</h2><br>
     <ul>
       <li>Strings - <strong>CHAR, VARCHAR, TEXT</strong></li>
       <li>Date/time - <strong>DATE, TIME, YEAR, TIMESTAMP, DATETIME</strong></li>
@@ -196,7 +196,6 @@
   <hr>
     <a id="create_db" name="create_db"></a>
   <h2> Create database, table and Edit table </h2>
-      <br>
     MariaDB [mysql]&gt; <strong>CREATE DATABASE my_database;</strong><br>
     Query OK, 1 row affected (0.00 sec)<br>
     MariaDB [mysql]&gt; <strong>CREATE DATABASE my_database;</strong><br>
