--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -73,7 +73,7 @@
     MariaDB [(none)]&gt; <strong>exit</strong><br>
     dos-prompt&gt; <strong>mysql -u root</strong><br>
     ...<br>
-    MariaDB [(none)]&gt; <strong>SHOW DATABASES;</strong><span style="font-weight: bold;"><br>
+    MariaDB [(none)]&gt; <strong>SHOW DATABASES;</strong><br>
   <pre>
   +--------------------+
   | Database           |
