--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -557,6 +557,8 @@ MariaDB [addresses]&gt;<strong>DROP TABLE people;</strong><br>
 <hr>
 <hr>
 <h2> Practice : Create Table in phpmyadmin </h2>
+<a href="https://www.siteground.com/tutorials/phpmyadmin/" target="_blank"> https://www.siteground.com/tutorials/phpmyadmin/ </a> <br>
+<img src="./images/phpmyadmin.PNG" width="700">
 <img src="./images/table-structure.png" width="500">
 <img src="./images/table-contents.png" width="600">
     <br>
