--- a/1. Introduction.html
+++ b/1. Introduction.html
@@ -29,7 +29,7 @@
             <hr>
             <h2>&nbsp;What is PHP?</h2>
             <ul>
-              <li>PHP 는 "PHP : Hypertext Preprocessor" 의 약자입니다.</li>
+              <li>PHP 는 "PHP(Personal Home Page): Hypertext Preprocessor" 의 약자입니다.</li>
               <li>PHP 는 널리 사용되는 오픈 소스 스크립트 언어입니다.</li>
               <li>PHP 스크립트는 서버에서 실행된다.</li>
               <li>PHP 는 다운로드하여 무료로 사용할 수 있다.</li>
