--- a/SQL-3. Introduction.html
+++ b/SQL-3. Introduction.html
@@ -56,7 +56,7 @@
             <p>우리는 특정 정보에 대하여 데이타베이스에 쿼리(query)할 수 있으며, 레코드 셋(record set)을
               반환받는다.&nbsp;</p>
             <p>다음의 (표준 SQL을 사용한) 쿼리(query)를 보시오 :</p>
-            <div class="code notranslate">
+            <div class="w3-code w3-border  notranslate">
               <div> SELECT LastName FROM Employees </div>
             </div>
             <p>위의 쿼리는 "Employees" 테이블에서&nbsp; "LastName" 열(column)의 모든 데이타를
