Update SQL-4. Connect to the MySQL Server.html

--- a/SQL-4. Connect to the MySQL Server.html
+++ b/SQL-4. Connect to the MySQL Server.html
@@ -255,8 +255,7 @@
               형식의 전체 참조는 다음을 참고하시오.</p>
             <hr>
             <h2>MySQL Data Types</h2>
-            <p>In MySQL there are three main types : <strong>text</strong>, <strong>number</strong>,
-              and <strong>Date/Time</strong> types.</p>
+            <p>MySQL에는 <strong>text , number</strong> 및 <strong>date/time</strong> 유형의 세 가지 주요 유형이 있습니다.</p>
             <p><b>Text types:</b></p>
             <table class="w3-table-all notranslate">
               <tbody>
