--- a/SQL-4. Connect to the MySQL Server.html
+++ b/SQL-4. Connect to the MySQL Server.html
@@ -249,8 +249,8 @@
               </div>
             
 
-            <p><b>Note:</b> CHAR 타입의 필드를 생성할 때, 필드의 최대 길이를 명시해야한다(e.g.
-              CHAR(50)).</p>
+            <p><b>Note:</b> VARCHAR 타입의 필드를 생성할 때, 필드의 최대 길이를 명시해야한다(e.g.
+              VARCHAR(50)).</p>
             <p>데이타 타입은 열이 보유할 수 있는 데이타의 타입을 명시한다.&nbsp; MySQL 에서 사용할 수 있는 모든 데이터
               형식의 전체 참조는 다음을 참고하시오.</p>
             <hr>
@@ -411,7 +411,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>TIMESTAMP()</td>
+                  <td><strong>TIMESTAMP()</strong></td>
                   <td>*A timestamp. TIMESTAMP values are stored as the number of
                     seconds since the Unix epoch ('1970-01-01 00:00:00' UTC).
                     Format: YYYY-MM-DD HH:MM:SS
