--- a/SQL-5. Insert Into.html
+++ b/SQL-5. Insert Into.html
@@ -17,9 +17,16 @@
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="SQL-4.%20Connect%20to%20the%20MySQL%20Server.html">«
                 Previous</a> <a class="w3-right w3-btn" href="SQL-6.%20Select.html">Next  »</a> </div>
             <hr>
-            <p class="intro">INSERT INTO 문은 테이블에 새로운 레코드를 삽입하는데 사용된다.&nbsp;</p>
+            <p class="intro">데이터베이스와 테이블이 생성되면 여기에 데이터를 추가 할 수 있습니다.</p>
+            <p> 따라야 할 구문 규칙은 다음과 같습니다.</p>
+            <ul>
+              <li>SQL 쿼리는 PHP에서 인용부호로 감싸야합니다. </li>
+              <li>SQL 쿼리 내의 문자열 값은 따옴표로 감싸야 합니다. </li>
+              <li>숫자 값은 따옴표로 묶지 않아야합니다. </li>
+              <li>NULL이라는 단어는 따옴표로 묶지 않아야합니다.</li>
+            </ul>
             <hr>
-            <h2>Insert Data Into a Database Table</h2>
+            <h2>Database Table 에 데이타 삽입하기</h2>
             <p>INSERT INTO 문은 데이타베이스 테이블에 새로운 레코드를 추가하는데 사용된다.</p>
             <h3>Syntax</h3>
             <p>INSERT INTO 문은 두 가지 형태로 작성이 가능하다. </p>
@@ -37,32 +44,38 @@
                 tutorial</a>.</p>
             <p>PHP 가 위의 문장을 실행하게 하려면 mysqli_query() 함수를 사용합니다. 이 함수는 MySQL 연결로
               쿼리나 명령을 전송하는데 사용합니다. </p>
-            <h3>Example</h3>
-            <p>앞 장에서 우리는 세 개의 열,&nbsp; "FirstName", "LastName" 과 "Age"을 갖는
-              "Persons"이라는 이름의 테이블을 생성했다. 같은 테이블을 이번 예에서 사용합니다. 다음의 예는
-              "Persons"&nbsp; 테이블에 새로운 레코드 두 개를 추가 한다.:</p>
-            <div class="w3-code w3-border  notranslate">
-              <div> &lt;?php<br>
-                $con=mysqli_connect("example.com","peter","abc123","my_db");<br>
+            <p>다음 예제는 "MyGuests"테이블에 새 레코드를 추가합니다. </p>
+            
+            <div class="w3-example">
+              <h2 class="example">Example (MySQLi Procedural)</h2>
+              <div class="w3-code notranslate"> 
+                &lt;?php<br>
+                $servername = "localhost";<br>
+                $username = "username";<br>
+                $password = "password";<br>
+                <br>
+                // Create connection<br>
+                $conn = mysqli_connect($servername, $username, $password);<br>
+                <br>
                 // Check connection<br>
-                if (mysqli_connect_errno())<br>
-                &nbsp;&nbsp;{<br>
-                &nbsp; echo "Failed to connect to MySQL: " .
-                mysqli_connect_error();<br>
-                &nbsp;&nbsp;}<br>
+                if (!$conn) {<br>
+                &nbsp;&nbsp;die("Connection failed: " . mysqli_connect_error());<br>
+                }<br>
                 <br>
-                mysqli_query($con,"INSERT INTO Persons (FirstName, LastName,
-                Age)<br>
-                VALUES ('Peter', 'Griffin',35)");<br>
+                $sql = "INSERT INTO MyGuests (firstname, lastname, email)<br>
+                VALUES ('John', 'Doe', 'john@example.com')";<br>
                 <br>
-                mysqli_query($con,"INSERT INTO Persons (FirstName, LastName,
-                Age) <br>
-                VALUES ('Glenn', 'Quagmire',33)");<br>
+                if (mysqli_query($conn, $sql)) {<br>
+                  echo "New record created successfully";<br>
+                } else {<br>
+                  echo "Error: " . $sql . "&lt;br&gt;" . mysqli_error($conn);<br>
+                }<br><br>
                 <br>
-                mysqli_close($con);<br>
-                ?&gt; </div>
-            </div>
-            <br>
+                mysqli_close($conn);<br>
+                ?&gt; <br>
+               </div>
+              </div>
+            
             <hr>
             <h2>Insert Data From a Form Into a Database</h2>
             <p>이제 우리는 "Persons"&nbsp; 테이블에 새로운 레코드를 추가하는데 사용할 수 있는&nbsp; HTML
