--- a/SQL-8. Order By Keyword.html
+++ b/SQL-8. Order By Keyword.html
@@ -17,12 +17,9 @@
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="SQL-7.%20Where.html">«
                 Previous</a> <a class="w3-right w3-btn" href="SQL-9.%20Update.html">Next  »</a> </div>
             <hr>
-            <p class="intro">ORDER BY keyword 는 record set 에서 데이타를 정렬하는데 사용된다.</p>
-            <hr>
-            <h2>The ORDER BY Keyword</h2>
+            <h2>MySQL 데이터베이스에서 데이터 선택 및 정렬</h2>
             <p>ORDER BY keyword 는 record set 에서 데이타를 정렬하는데 사용된다.</p>
-            <p>ORDER BY keyword 는 기본적으로 레코드를 오름차순으로 정렬한다. </p>
-            <p>만약 레코드를 내림차순으로 정렬하고 싶다면, DESC keyword 를 사용할 수 있다.</p>
+            <p>ORDER BY keyword 는 기본적으로 레코드를 오름차순으로 정렬한다. 만약 레코드를 내림차순으로 정렬하고 싶다면, DESC keyword 를 사용할 수 있다.</p>
             <h3>Syntax</h3>
             <div class="w3-code w3-border   notranslate">
               <div> SELECT column_name(s)<br>
@@ -31,37 +28,53 @@
             </div>
             <p>SQL 에 대한 자세한 내용은 ==&gt; <a href="http://www.w3schools.com/sql/default.asp">SQL
                 tutorial</a>.</p>
-            <h3>Example</h3>
-            <p>다음의 예는 "Persons" 테이블에 저장된 모든 데이타를 선택하고 ,&nbsp; "Age" 열의 결과로
-              정렬한다.:</p>
-            <div class="w3-code w3-border   notranslate">
-              <div> &lt;?php<br>
-                $con=mysqli_connect("example.com","peter","abc123","my_db");<br>
+
+            <h3>MySQLi로 데이터 선택 및 정렬</h3>
+            <p>다음 예에서는 MyGuests 테이블에서 id, firstname 및 lastname 열을 선택합니다. 레코드는 lastname 열을 기준으로 정렬됩니다.:</p>
+            
+            <div class="w3-example">
+              <h2 class="example">Example (MySQLi Procedural)</h2>
+              <div class="w3-code notranslate"> 
+                &lt;?php<br>
+                $servername = "localhost";<br>
+                $username = "username";<br>
+                $password = "password";<br>
+                $dbname = "myDB";<br>
+<br>
+                // Create connection<br>
+                $conn = mysqli_connect($servername, $username, $password, $dbname);<br>
                 // Check connection<br>
-                if (mysqli_connect_errno())<br>
-                &nbsp;&nbsp;{<br>
-                &nbsp; echo "Failed to connect to MySQL: " .
-                mysqli_connect_error();<br>
-                &nbsp;&nbsp;}<br>
-                <br>
-                $result = mysqli_query($con,"SELECT * FROM Persons ORDER BY
-                age");<br>
-                <br>
-                while($row = mysqli_fetch_array($result))<br>
-                &nbsp;&nbsp;{<br>
-                &nbsp;&nbsp;echo $row['FirstName'];<br>
-                &nbsp;&nbsp;echo " " . $row['LastName'];<br>
-                &nbsp;&nbsp;echo " " . $row['Age'];<br>
-                &nbsp;&nbsp;echo "&lt;br&gt;";<br>
-                &nbsp;&nbsp;}<br>
-                <br>
-                mysqli_close($con);<br>
-                ?&gt; </div>
-            </div>
+                if (!$conn) {<br>
+                  die("Connection failed: " . mysqli_connect_error());<br>
+                }<br>
+<br>
+                $sql = "SELECT id, firstname, lastname FROM MyGuests ORDER BY lastname";<br>
+                $result = mysqli_query($conn, $sql);<br>
+<br>
+                if (mysqli_num_rows($result) &gt; 0) {<br>
+                  // output data of each row<br>
+                  while($row = mysqli_fetch_assoc($result)) {<br>
+                    echo "id: " . $row["id"]. " - Name: " . $row["firstname"]. " " . $row["lastname"]. "&lt;br&gt;";<br>
+                  }<br>
+                } else {<br>
+                  echo "0 results";<br>
+                }<br>
+<br>
+                mysqli_close($conn);<br>
+                ?&gt; <br>
+               </div>              <br>
+              <a target="_blank" class="w3-btn w3-margin-bottom" 
+                 href="https://tryphp.w3schools.com/showphpfile.php?filename=demo_db_select_orderby_proc">Run
+                example »</a>
+              </div>
+ 
             <p>위의 코드의 출력을 다음과 같을 것이다:</p>
             <div class="w3-code w3-border   notranslate">
-              <div> Glenn Quagmire 33<br>
-                Peter Griffin 35 </div>
+              <div> 
+                id: 1 - Name: John Doe<br>
+                id: 3 - Name: Julie Dooley<br>
+                id: 2 - Name: Mary Moe<br>
+            </div>
             </div>
             <br>
             <hr>
