Update SQL-10. Delete From.html

--- a/SQL-10. Delete From.html
+++ b/SQL-10. Delete From.html
@@ -95,7 +95,7 @@
                   die("Connection failed: " . mysqli_connect_error());<br>
                 }<br>
                 <br>
-                // sql to delete a record
+                // sql to delete a record<br>
                 $sql = "DELETE FROM MyGuests WHERE id=3";<br>
                 <br>
                 if (mysqli_query($conn, $sql)) {<br>
