Update Ex-6. PHP registration with MySQL.html

--- a/Ex-6. PHP registration with MySQL.html
+++ b/Ex-6. PHP registration with MySQL.html
@@ -8,6 +8,7 @@
 #smallnavContainer {display:none;}
 </style> <meta name="viewport" content="width=device-width">
  <link rel="stylesheet" type="text/css" href="http://www.w3schools.com/stdtheme.css">
+        <link rel="stylesheet" href="w3.css">
   </head>
   <body>
     <div id="smallnavContainer">
