Update Ex-6. PHP registration with MySQL.html

--- a/Ex-6. PHP registration with MySQL.html
+++ b/Ex-6. PHP registration with MySQL.html
@@ -139,7 +139,7 @@
                       &lt;/tr&gt;<br>
                       &lt;/table&gt;<br>
                   &lt;form&gt;<br>
-                  &lt;b&gt; Not registered yet? <a href="register.php"&gt; Registeration &lt;/a&gt;&lt;/b&gt;<br>
+                  &lt;b&gt; Not registered yet? &lt;a href="register.php"&gt; Registeration &lt;/a&gt;&lt;/b&gt;<br>
               &lt;/body&gt;<br>
               &lt;/html&gt;<br>
                </div>
