Update Ex-6. PHP registration with MySQL.html

--- a/Ex-6. PHP registration with MySQL.html
+++ b/Ex-6. PHP registration with MySQL.html
@@ -125,21 +125,20 @@
               &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;tr&gt;<br>
               &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;th colspan="2" align="center"&gt; Login &lt;/th&gt;<br>
               &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;/tr&gt;<br>
-                      &lt;tr&gt;<br>
-                          &lt;td width="100"&gt; Username &lt;/td&gt;<br>
-                          &lt;td> <input type="text" name="username" &gt; &lt;/td&gt;<br>
-                      &lt;/tr&gt;<br>
-                      &lt;tr&gt;<br>
-                          &lt;td width="100"> Password &lt;/td&gt;<br>
-                          &lt;td> <input type="password" name="password" &gt; &lt;/td&gt;<br>
-                      &lt;/tr&gt;<br>
-                      &lt;tr&gt;<br>
-                          &lt;td colspan="2" align="center"&gt;<br>
-                          &lt;input type="submit" name="submit" value="Login" &gt; &lt;/td&gt;<br>
-                      &lt;/tr&gt;<br>
-                      &lt;/table&gt;<br>
-                  &lt;form&gt;<br>
-                  &lt;b&gt; Not registered yet? &lt;a href="register.php"&gt; Registeration &lt;/a&gt;&lt;/b&gt;<br>
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;td width="100"&gt; Username &lt;/td&gt;<br>
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;td&gt; &lt;input type="text" name="username" &gt; &lt;/td&gt;<br>
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;/tr&gt;<br>
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;tr&gt;<br>
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;td width="100"> Password &lt;/td&gt;<br>
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;td&gt; &lt;input type="password" name="password" &gt; &lt;/td&gt;<br>
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;/tr&gt;<br>
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;tr&gt;<br>
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;td colspan="2" align="center"&gt;<br>
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;input type="submit" name="submit" value="Login" &gt; &lt;/td&gt;<br>
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;/tr&gt;<br>
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;/table&gt;<br>
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;form&gt;<br>
+              &nbsp;&nbsp;&nbsp; &lt;b&gt; Not registered yet? &lt;a href="register.php"&gt; Registeration &lt;/a&gt;&lt;/b&gt;<br>
               &lt;/body&gt;<br>
               &lt;/html&gt;<br>
                </div>
