Update Ex-6. PHP registration with MySQL.html

--- a/Ex-6. PHP registration with MySQL.html
+++ b/Ex-6. PHP registration with MySQL.html
@@ -123,8 +123,8 @@
               &nbsp;&nbsp;&nbsp;&lt;form method="post" action="login.php"&gt;<br>
               &nbsp;&nbsp;&nbsp;&lt;table border="2" align="center"&gt;<br>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;tr&gt;<br>
-              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;th colspan="2" align="center"&gt; Login &lt;/th&gt;<br>
-              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;/tr&gt;<br>
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&lt;th colspan="2" align="center"&gt; Login &lt;/th&gt;<br>
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;/tr&gt;<br>
               &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;td width="100"&gt; Username &lt;/td&gt;<br>
               &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;td&gt; &lt;input type="text" name="username" &gt; &lt;/td&gt;<br>
               &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&lt;/tr&gt;<br>
