Update Ex-6. PHP registration with MySQL.html

--- a/Ex-6. PHP registration with MySQL.html
+++ b/Ex-6. PHP registration with MySQL.html
@@ -152,7 +152,7 @@
             <br>
             
             <div class="w3-example">
-              <h2 class="example">Login.php</h2>
+              <h2 class="example">registration.php</h2>
               <div class="w3-code notranslate"> 
               &lt;!DOCTYPE html&gt; <br>
               &lt;?php<br>
@@ -237,7 +237,7 @@
             아래의 코드(logout.php)는 session 을 삭제하고, login.php 로 이동 시킨다 . <br>
             <br>
             <div class="w3-example">
-              <h2 class="example">Logout.php</h2>
+              <h2 class="example">logout.php</h2>
               <div class="w3-code notranslate"> 
               &lt;?php<br>
                 session_start();<br>
@@ -253,7 +253,7 @@
             않은 경우에는 login.php로 이동 한다. <br>
             <br>
             <div class="w3-example">
-              <h2 class="example">Logout.php</h2>
+              <h2 class="example">content.php</h2>
               <div class="w3-code notranslate"> 
               &lt;!DOCTYPE html&gt;<br>
               &lt;?php<br>
