Update Ex-6. PHP registration with MySQL.html

--- a/Ex-6. PHP registration with MySQL.html
+++ b/Ex-6. PHP registration with MySQL.html
@@ -24,9 +24,7 @@
       <div id="page" style="width:auto; padding:30px; margin:10px;">
         <div>
           <div id="main" style="width:auto">
-            <h1>PHP <span class="color_h1">Registration, login and logout with
-                MySQL<br>
-              </span></h1>
+            <h1>PHP Login, logout and registration with MySQL</h1>
             <div class="chapter">
               <div class="prev"><br>
               </div>
