Update Ex-6. PHP registration with MySQL.html

--- a/Ex-6. PHP registration with MySQL.html
+++ b/Ex-6. PHP registration with MySQL.html
@@ -32,12 +32,12 @@
             <hr>다음의 예는 database 에 등록된 사용자들의 login 을 허용하는 웹사이트 구축입니다.<br>
             필요한 웹페이지들은 <br>
             <ul>
-              <li>login.php : form 으로부터 사용자 정보를 입력받아 users_db.users 의 사용자 목록과
+              <li><b>login.php</b> : form 으로부터 사용자 정보를 입력받아 users_db.users 의 사용자 목록과
                 비교하여, 있으면 content.php 로,&nbsp; 새로운 사용자면 registration.php 를 통해서
                 등록 후 content.php 로 이동 </li>
-              <li>logout.php :</li>
-              <li>registration.php :</li>
-              <li>content.php&nbsp; : 실제 웹사이트 .</li>
+              <li><b>logout.php</b> :</li>
+              <li><b>registration.php</b> :</li>
+              <li><b>content.php</b>; : 실제 웹사이트 .</li>
               <li>MySQL : database "users_db" 와 table "users"<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 e.g.) CREATE TABLE users (<br>
