Update Ex-6. PHP registration with MySQL.html

--- a/Ex-6. PHP registration with MySQL.html
+++ b/Ex-6. PHP registration with MySQL.html
@@ -33,8 +33,8 @@
             필요한 웹페이지들은 <br>
             <ul>
               <li><b>login.php</b> : form 으로부터 사용자 정보를 입력받아 users_db.users 의 사용자 목록과
-                비교하여, 있으면 content.php 로,&nbsp; 새로운 사용자면 registration.php 를 통해서
-                등록 후 content.php 로 이동 </li>
+                비교하여, 있으면 content.php 로,&nbsp; 새로운 사용자는 registration.php 를 통해서
+                등록 후 login.php 를 통해서 content.php 로 이동 </li>
               <li><b>logout.php</b> :</li>
               <li><b>registration.php</b> :</li>
               <li><b>content.php</b>; : 실제 웹사이트 .</li>
