Update Ex-7. image uploading & displaying using mysql.html

--- a/Ex-7. image uploading & displaying using mysql.html
+++ b/Ex-7. image uploading & displaying using mysql.html
@@ -18,7 +18,7 @@
               <div class="prev"><br>
               </div>
             </div>
-            <hr>다음의 예는 image 파일을 DB 에 업로딤하고 DB에 있는 것을 표시하는 방벙을 보여준다.<br>
+            <hr>다음의 예는 image 파일을 DB에 업로딩하고 DB에 있는 것을 표시하는 방벙을 보여준다.<br>
             <ul>
               <li><a href="http://jun.hansung.ac.kr/SWP/PHP/examples/image.php">image.php</a> : local 컴퓨터에 있는
                 image 파일을 서버에 업로드 하기 위한 form 요소와 완료되었을 때 get.php 를 이용하여 해당 image
@@ -61,7 +61,7 @@
                 &nbsp;&nbsp;&nbsp; &lt;?php<br>
                 &nbsp;&nbsp;&nbsp; <br>
                 &nbsp;&nbsp;&nbsp; $con =
-                mysqli_connect("localhost","root","","my_db") orㅣ
+                mysqli_connect("localhost","root","","my_db") or
                 die(mysqli_connect_error());<br>
                 &nbsp;&nbsp;&nbsp; <br>
                 &nbsp;&nbsp;&nbsp; $file = $_FILES['image']['tmp_name'];<br>
